--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Premium Heater - Ultra-slim Infrared Electric Heater</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300&display=swap"
           rel="stylesheet">
@@ -83,7 +83,7 @@
         <div class=" glide__track" data-glide-el="track">
             <div class="features flex justify-around items-center glide__slides">
                 <div class="">
-                    <img src="img/image%2010.png" alt="">
+                    <img src="img/image%2011%20(1).png" alt="">
                     <p>Office</p>
                 </div>
                 <div class="">
@@ -112,7 +112,7 @@
                 <img src="img/G222%201.png" alt="">
             </div>
             <div class="mobile__img flex justify-center lg:hidden">
-                <img src="img/G222%201.png" alt="">
+                <img src="img/G222%201%20(1).png" alt="">
             </div>
         </div>
         <div class="watermark hidden lg:block">Economy</div>
@@ -180,7 +180,7 @@
 <section class="specifications" id="specifications">
     <div class="specificationss">
         <div class="features m-auto  flex flex-col lg:flex-row justify-between">
-            <div class="feature__item mb-6 lg:mb-0 lg:mx-2">
+            <div class="feature__item mb-6 lg:mb-0 lg:mr-2">
                 <div class="flex flex-col ">
                     <img src="img/Group%2042(1).png" alt="" class="hidden lg:block large">
                     <img src="img/Group%2042.png" alt="" class="lg:hidden dd">
@@ -197,7 +197,7 @@
                     <p>Our factory is located in Poland and we use high-quality materials only.</p>
                 </div>
             </div>
-            <div class="feature__item my-6 lg:my-0 lg:mx-2">
+            <div class="feature__item my-6 lg:my-0 lg:ml-2">
                 <div class="flex flex-col">
                     <img src="img/Group%2018.png" alt="" class="hidden lg:block large">
                     <img src="img/Group%2018%20(2).png" alt="" class="lg:hidden mobile">
