--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <header class="header ">
     <div class="headerr flex flex-col lg:flex-row">
-        <div class="header-content w-full lg:w-3/5">
+        <div class="header-content w-full lg:w-2/5">
             <h1>Ultra-slim Infrared Heating Panel for Home and Office</h1>
             <p>The search for your perfect heater is over – our EU-certified Premium Heater keeps you cozy and warm
                 safely
@@ -122,20 +122,21 @@
 <section class="gentle">
     <div class="gentlee">
         <h2>Gentle heat</h2>
-        <p class="my-6">In a way, it works like the Sun: the heater's infrared rays evenly and gently heat up space and
+        <p class="my-6 w-2/3">In a way, it works like the Sun: the heater's infrared rays evenly and gently heat up
+            space and
             the
             things in it,
             keeping you warm even after you turn it off. This method is perfectly safe both for humans and pets.</p>
         <div class="lg:hidden flex justify-between my-8">
-            <h3>Regular
+            <h3>Regular<br>
                 heater</h3>
             <h3 class="text-right">Premium
                 heater</h3>
         </div>
         <div class="gentle-change-line flex justify-center lg:justify-between">
-            <div class="regular-heater hidden lg:block w-1/4">
-                <h3>Regular
-                    heater</h3>
+            <div class="regular-heater hidden lg:block">
+                <h3>Regular</h3>
+                <h3>heater</h3>
                 <p>heats and dries out air, warm air wents upside leaving a floor cold</p>
             </div>
             <div class="gentle-img text-center lg:mx-8" style="position: relative">
@@ -144,10 +145,10 @@
                     <img data-caption="After" src="img/premimumm.png" alt="image Two">
                 </div>
             </div>
-            <div class="premium-heater text-right hidden lg:block w-1/4">
-                <h3>Premium
-                    heater</h3>
-                <p>doesn't dry out air, evenly warms all objects in the room, including floor and walls</p>
+            <div class="premium-heater text-right hidden lg:block">
+                <h3>Premium</h3>
+                <h3>heater</h3>
+                <p>doesn't dry out air, <br>evenly warms all objects in the room, including floor and walls</p>
             </div>
         </div>
     </div>
