--- a/index.html
+++ b/index.html
@@ -122,15 +122,15 @@
 <section class="gentle">
     <div class="gentlee">
         <h2>Gentle heat</h2>
-        <p class="my-6 w-2/3">In a way, it works like the Sun: the heater's infrared rays evenly and gently heat up
+        <p class="my-6 lg:w-2/3">In a way, it works like the Sun: the heater's infrared rays evenly and gently heat up
             space and
             the
             things in it,
             keeping you warm even after you turn it off. This method is perfectly safe both for humans and pets.</p>
-        <div class="lg:hidden flex justify-between my-8">
+        <div class="lg:hidden flex justify-between mt-24 mb-8">
             <h3>Regular<br>
                 heater</h3>
-            <h3 class="text-right">Premium
+            <h3 class="text-right">Premium<br>
                 heater</h3>
         </div>
         <div class="gentle-change-line flex justify-center lg:justify-between">
@@ -812,7 +812,7 @@
     <div class="copyrigt">
         © All Right Reserved. Premium Heater 2020.
     </div>
-    <div class="links flex justify-around lg:justify-between w-full lg:w-2/5 mt-4 lg:m-0">
+    <div class="links flex justify-between w-full lg:w-2/5 mt-4 lg:m-0">
         <a href="terms.html" class="">Terms of use</a>
         <a href="privacy.html" class="">Privacy Policy</a>
     </div>
