--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class=" glide__track" data-glide-el="track">
             <div class="features flex justify-around items-center glide__slides">
                 <div class="">
-                    <img src="img/image%2011%20(1).png" alt="">
+                    <img src="img/office-image10.png" alt="">
                     <p>Office</p>
                 </div>
                 <div class="">
